fix: mobile view project modal overflow

--- a/src/global.scss
+++ b/src/global.scss
@@ -13,6 +13,12 @@ html {
   scrollbar-gutter: stable;
 }
 
+html,
+body {
+  overflow-x: hidden;
+  max-width: 100%;
+}
+
 body {
   font-family: InterVariable, sans-serif;
   background: var(--bg);
