--- a/src/projects/projects.scss
+++ b/src/projects/projects.scss
@@ -183,6 +183,8 @@
   animation: fadeIn 0.25s ease;
 
   &__content {
+    position: relative;
+    z-index: 1;
     width: 100%;
     max-width: 1200px;
     max-height: 90vh;
@@ -200,6 +202,7 @@
 
   &__close {
     position: absolute;
+    z-index: 20;
     top: 1rem;
     right: 1rem;
     background: rgba(255, 255, 255, 0.1);
@@ -237,5 +240,10 @@
     .projects-container {
       grid-template-columns: 1fr;
     }
+  }
+
+  .project-modal__content {
+    width: calc(100% - 1.5rem);
+    margin: 0 auto;
   }
 }
